# SE-Sync

./: .gitattributes  .gitmodules  .travis.sh  .travis.yml  LICENSE.txt  README.md  README.txt
C++/: .gitignore  CMakeLists.txt
C++/ROPTLIB/: CMakeLists.txt  Makefile  README.md
C++/ROPTLIB/Manifolds/: Element.cpp  Element.h  LinearOPE.cpp  LinearOPE.h  Manifold.cpp  Manifold.h  ProductElement.cpp  ProductElement.h  ProductManifold.cpp  ProductManifold.h  SharedSpace.cpp  SharedSpace.h  SmartSpace.cpp  SmartSpace.h
C++/ROPTLIB/Manifolds/CpxNStQOrth/: CSOVariable.cpp  CSOVariable.h  CSOVector.cpp  CSOVector.h  CpxNStQOrth.cpp  CpxNStQOrth.h
C++/ROPTLIB/Manifolds/ElasticShape/: ElasticShape.cpp  ElasticShape.h  ShapeVariable.cpp  ShapeVariable.h  ShapeVector.cpp  ShapeVector.h
C++/ROPTLIB/Manifolds/EucPositive/: EucPosVariable.cpp  EucPosVariable.h  EucPosVector.cpp  EucPosVector.h  EucPositive.cpp  EucPositive.h
C++/ROPTLIB/Manifolds/Euclidean/: EucVariable.cpp  EucVariable.h  EucVector.cpp  EucVector.h  Euclidean.cpp  Euclidean.h
C++/ROPTLIB/Manifolds/Grassmann/: GrassVariable.cpp  GrassVariable.h  GrassVector.cpp  GrassVector.h  Grassmann.cpp  Grassmann.h
C++/ROPTLIB/Manifolds/L2Sphere/: L2Sphere.cpp  L2Sphere.h  L2SphereVariable.cpp  L2SphereVariable.h  L2SphereVector.cpp  L2SphereVector.h
C++/ROPTLIB/Manifolds/LowRank/: LowRank.cpp  LowRank.h  LowRankVariable.cpp  LowRankVariable.h  LowRankVector.cpp  LowRankVector.h
C++/ROPTLIB/Manifolds/Oblique/: Oblique.cpp  Oblique.h  ObliqueVariable.cpp  ObliqueVariable.h  ObliqueVector.cpp  ObliqueVector.h
C++/ROPTLIB/Manifolds/OrthGroup/: OrthGroup.cpp  OrthGroup.h  OrthGroupVariable.cpp  OrthGroupVariable.h  OrthGroupVector.cpp  OrthGroupVector.h
C++/ROPTLIB/Manifolds/PreShapeCurves/: PSCVariable.cpp  PSCVariable.h  PSCVector.cpp  PSCVector.h  PreShapeCurves.cpp  PreShapeCurves.h
C++/ROPTLIB/Manifolds/SPDManifold/: SPDManifold.cpp  SPDManifold.h  SPDVariable.cpp  SPDVariable.h  SPDVector.cpp  SPDVector.h
C++/ROPTLIB/Manifolds/SPDTensor/: SPDTVariable.cpp  SPDTVariable.h  SPDTVector.cpp  SPDTVector.h  SPDTensor.cpp  SPDTensor.h
C++/ROPTLIB/Manifolds/Sphere/: Sphere.cpp  Sphere.h  SphereVariable.cpp  SphereVariable.h  SphereVector.cpp  SphereVector.h
C++/ROPTLIB/Manifolds/Stiefel/: StieVariable.cpp  StieVariable.h  StieVector.cpp  StieVector.h  Stiefel.cpp  Stiefel.h
C++/ROPTLIB/Others/: ForDebug.cpp  ForDebug.h  MinPNormConHull.cpp  MinPNormConHull.h  MyMatrix.cpp  MyMatrix.h  Spline.cpp  Spline.h  Timer.cpp  Timer.h  def.h  randgen.cpp  randgen.h
C++/ROPTLIB/Others/SparseBLAS/: blas_enum.h  blas_sparse.h  blas_sparse_proto.h  nist_spblas.cpp
C++/ROPTLIB/Problems/: Problem.cpp  Problem.h  juliaProblem.cpp  juliaProblem.h  mexProblem.cpp  mexProblem.h
C++/ROPTLIB/Problems/ElasticCurvesRO/: DriverElasticCurvesRO.cpp  DriverElasticCurvesRO.h  ElasticCurvesRO.cpp  ElasticCurvesRO.h
C++/ROPTLIB/Problems/EucFrechetMean/: EucFrechetMean.cpp  EucFrechetMean.h
C++/ROPTLIB/Problems/EucPosSpCd/: EucPosSpCd.cpp  EucPosSpCd.h
C++/ROPTLIB/Problems/EucQuadratic/: EucQuadratic.cpp  EucQuadratic.h
C++/ROPTLIB/Problems/GrassRQ/: GrassRQ.cpp  GrassRQ.h
C++/ROPTLIB/Problems/KarcherMean/: KarcherMean.cpp  KarcherMean.h
C++/ROPTLIB/Problems/LRMatrixCompletion/: LRMatrixCompletion.cpp  LRMatrixCompletion.h
C++/ROPTLIB/Problems/ObliqueSparsePCA/: ObliqueSparsePCA.cpp  ObliqueSparsePCA.h
C++/ROPTLIB/Problems/ObliqueTestSparsePCA/: ObliqueTestSparsePCA.cpp  ObliqueTestSparsePCA.h
C++/ROPTLIB/Problems/OrthBoundingBox/: OrthBoundingBox.cpp  OrthBoundingBox.h
C++/ROPTLIB/Problems/PreShapePathStraighten/: PreShapePathStraighten.cpp  PreShapePathStraighten.h
C++/ROPTLIB/Problems/SPDMean/: SPDMean.cpp  SPDMean.h
C++/ROPTLIB/Problems/SPDTensorDL/: SPDTensorDL.cpp  SPDTensorDL.h
C++/ROPTLIB/Problems/ShapePathStraighten/: ShapePathStraighten.cpp  ShapePathStraighten.h
C++/ROPTLIB/Problems/SphereConvexHull/: SphereConvexHull.cpp  SphereConvexHull.h
C++/ROPTLIB/Problems/StieBrockett/: StieBrockett.cpp  StieBrockett.h
C++/ROPTLIB/Problems/StieSoftICA/: StieSoftICA.cpp  StieSoftICA.h
C++/ROPTLIB/Solvers/: LRBFGS.cpp  LRBFGS.h  LRBFGSLPSub.cpp  LRBFGSLPSub.h  LRTRSR1.cpp  LRTRSR1.h  MRankAdaptive.cpp  MRankAdaptive.h  QuasiNewton.cpp  QuasiNewton.h  RBFGS.cpp  RBFGS.h  RBFGSLPSub.cpp  RBFGSLPSub.h  RBroydenFamily.cpp  RBroydenFamily.h  RCG.cpp  RCG.h  RGS.cpp  RGS.h  RNewton.cpp  RNewton.h  RSD.cpp  RSD.h  RTRNewton.cpp  RTRNewton.h  RTRSD.cpp  RTRSD.h  RTRSR1.cpp  RTRSR1.h  RWRBFGS.cpp  RWRBFGS.h  Solvers.cpp  Solvers.h  SolversLS.cpp  SolversLS.h  SolversLSLPSub.cpp  SolversLSLPSub.h  SolversTR.cpp  SolversTR.h
C++/ROPTLIB/cwrapper/: Readme.txt  f2c.h
C++/ROPTLIB/cwrapper/blas/: caxpy.h  ccopy.h  cdotc.h  (+138 more)
C++/ROPTLIB/test/: ComplexToReal.cpp  DriverJuliaProb.cpp  DriverJuliaProb.h  DriverMexProb.cpp  DriverMexProb.h  DynamicProgrammingNonuniformY.cpp  DynamicProgrammingNonuniformY.h  DynamicProgrammingNonuniformY_for_Qs.cpp  RealToComplex.cpp  TestCSO.cpp  TestCSO.h  TestElasticCurvesRO.cpp  TestElasticCurvesRO.h  TestEucFrechetMean.cpp  TestEucFrechetMean.h  TestEucPosSpCd.cpp  TestEucPosSpCd.h  TestEucQuadratic.cpp  TestEucQuadratic.h  TestGrassRQ.cpp  TestGrassRQ.h  TestKarcherMean.cpp  TestKarcherMean.h  TestLRMatrixCompletion.cpp  TestLRMatrixCompletion.h  TestMyMatrix.cpp  TestMyMatrix.h  TestOrthBoundingBox.cpp  TestOrthBoundingBox.h  TestPreShapePathStraighten.cpp  TestPreShapePathStraighten.h  TestProduct.cpp  TestProduct.h  TestProductExample.cpp  TestSPDMean.cpp  TestSPDMean.h  TestSPDTensorDL.cpp  TestSPDTensorDL.h  TestShapePathStraighten.cpp  TestShapePathStraighten.h  (+15 more)
C++/SE-Sync/include/: RelativePoseMeasurement.h  SESync.h  SESyncProblem.h  SESyncRTRNewton.h  SESync_types.h  SESync_utils.h  stopwatch.h
C++/SE-Sync/src/: PySESync.cpp  SESync.cpp  SESyncProblem.cpp  SESyncPython.cpp  SESyncRTRNewton.cpp  SESyncVisualizer.cpp  SESync_utils.cpp  StiefelProduct.cpp  main.cpp
C++/examples/: CMakeLists.txt  PySESync.ipynb  SE-Snek.ipynb  SESync_benchmarking.ipynb  main.cpp  mainviz.cpp
(+1520 files in other folders)
